# imiNAO

./: README.md
control_v2/: CMakeLists.txt  package.xml  readme.md
control_v2/launch/: controller.launch  nao.launch
control_v2/scripts/: get_joint_service.py  keyboard_node.py  move_service.py  nao_control.py
control_v2/src/: client.cpp
control_v2/srv/: GetJoint.srv  MoveJoints.srv
perceptor/: CMakeLists.txt  package.xml  readme.md
perceptor/backend/: camera.html  image_converter.py  index.html  package-lock.json  package.json  ros_interface.js  sketch.js
perceptor/launch/: perceptor.launch
perceptor/msg/: Keypoint.msg  Pose.msg
perceptor/scripts/: live_demo.ipynb  pose_interface.py  ros_interface.py
perceptor/scripts/.ipynb_checkpoints/: live_demo-checkpoint.ipynb
perceptor/scripts/posenet/: package-lock.json  package.json  run.html
